    defaults (#914)
  * Fixed same interRDF can be run twice (Issue #924)
  * Support for TPR files produced by Gromacs-2016 (Issue #932)
  * Fixed parsing PDB files with CONECT records to TER entries (Issue #936)
  * Fixed parsing PDB files with single entry in CONECT record (Issue #937)
  * Progress meters are now displayed as expected on jupyter notebooks
    (Issue #927)

Changes
  * Started unifying the API of analysis classes (named internally
    "Bauhaus" style; see Issue #719)
  * Added protected variable _frame_index to to keep track of frame iteration
    number in AnalysisBase
  * Added new AlignTraj class for alignment. (Issue #845)
  * Added new diffusionmap module for dimension reduction (Issue #857)
  * Added new PCA module for dimension reduction (PR #896)
  * Qcprot now takes N x 3 arrays instead of 3 x N arrays. This gives about a
    40% speed up. (PR #930)
  * The ProgressMeter class now has a `dynamic` keyword argument. It is now
    recommended to provide format strings using the new python format syntax,
    the old %-based syntax is still available but will be deprecated.
    (PR #944)
  * Analysis.rms.RMSD now confirms to standard analysis API (Issue #893)
  * Fragments in Universe.fragment are now sorted by the index of their first
    atom. (Issue 1007)
  * atoms.tranform/translate/rotate/rotateby return original atomgroup (Issue #1010)
  * atoms.translate/rotateby don't accept AtomGroup tuples as parameters anymore (Issue #1025)
  * atoms.rotate by default now uses the centroid as center of rotation like rotateby (Issue #1022)


Deprecations (Issue #599)
  * Use of rms_fit_trj deprecated in favor of AlignTraj class (Issue #845)
  * Moved analysis.x3dna to the analysis.legacy module (Issue #906)

05/15/16 jandom, abhinavgupta94, orbeckst, kain88-de, hainm, jbarnoud,
         dotsdl, richardjgowers, BartBruininks, jdetle

  * 0.15.0

Metadata

  * link download_url to GitHub releases so that Depsy recognizes
    contributors (issue #749)